# musiclist

./: .gitignore  .pre-commit-config.yaml  LLM_CONTEXT.md  Makefile  README.md  cli.py  main.py  music_calendar.py  musiclist.db  plan.txt  pyproject.toml  requirements.txt  test.txt  todo.txt  user_config.json  venues.txt  venues_config.py
benchmarking/: Makefile  benchmark.py  benchmark_report_20250727_132130.json  benchmark_report_20250727_132152.json
models/: event.py
scrapers/: __init__.py  base.py  brick_mortar.py  independent.py  neck_woods.py
storage/: database.py
tests/: dynamic_venue_tests.py  run_tests.py  test_brick_mortar.py  test_template.py  test_warfield.py
tests/data/: audio_nightclub_expected.csv  bimbo's_365_club_expected.csv  bottom_of_the_hill_expected.csv  brick_and_mortar_music_hall_expected.csv  gray_area_expected.csv  great_american_music_hall_expected.csv  neck_of_the_woods_expected.csv  reverb_expected.csv  the_chapel_expected.csv  the_independent_expected.csv  the_midway_expected.csv  the_regency_ballroom_expected.csv  the_warfield_expected.csv
tests/tests/data/: public_works_expected.csv
ui/: calendar.py  terminal.py
